# ai-team

./: README.md  pyproject.toml
output/: report.md
src/ai_team/: crew.py  main.py
src/ai_team/config/: agents.yaml  tasks.yaml
