[project]
name = "ai_team"
version = "0.1.0"
description = "ai-team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
ai_team = "ai_team.main:run"
run_crew = "ai_team.main:run"
train = "ai_team.main:train"
replay = "ai_team.main:replay"
test = "ai_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
